Correction dans les adresses mail

--- a/main.tex
+++ b/main.tex
@@ -36,7 +36,7 @@
 %   1. Supelec-Metz Campus, IMS Reasearch group, France. \texttt{prenom.nom@supelec.fr}}
 \author{Edouard Klein\inst{1}\inst{3} \and Matthieu Geist\inst{1} \and Olivier Pietquin\inst{1}\inst{2}}
  \institute{
- 1. Supélec-Metz Campus, IMS Research group, France, \texttt{nom.prenom@supelec.fr}\\
+ 1. Supélec-Metz Campus, IMS Research group, France, \texttt{prenom.nom@supelec.fr}\\
  2. UMI 2958 CNRS - GeorgiaTech, France\\
  3. Equipe ABC, LORIA-CNRS, France.
  }
